fix: css so btn_field classes can’t wrap

--- a/fuel/modules/fuel/assets/css/fuel.css
+++ b/fuel/modules/fuel/assets/css/fuel.css
@@ -729,9 +729,7 @@ iframe#viewpage_iframe { border: none; width: 100%; height: 100%; }
 input#Save, input.submit { margin-top: 10px; width: 150px; text-align: center; }
 input#Cancel, input.cancel { margin-top: 10px; margin-right: 10px; width: 60px; text-align: center; }
 div#tooltip h3 { font-size: 11px; font-weight: normal; }
-a.btn_field { -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; line-height: 12px; border: 1px solid #ccc; padding: 3px 5px 3px 5px; 
-  background: #eee url(../images/btn.png) repeat-x;
-  }
+a.btn_field { -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; line-height: 12px; border: 1px solid #ccc; padding: 3px 5px 3px 5px; background: #eee url(../images/btn.png) repeat-x; white-space: nowrap; }
 a.btn_field:hover { background-position: 0 -27px; }
 a#back_to { margin-bottom: 20px; display: block; }
 .hidden_form { visibility:hidden; height: 0px; overflow: hidden; }
